add numbers above 10 and play with korean hours/minutes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			<p>Korean numbers quiz! Find the correct answer. </p>
 			<p>Click on the game tiles to toggle their visibility and customise your training.</p>
 			<p class="control-descriptor">Answer tiles style:</p>
-			<div class="control-div" id="answer-control">
+			<div class="control-div reduced-font-size" id="answer-control">
 				<p id="current-answer-control"></p>
 			</div>
-			<!--<p class="control-descriptor">Level:</p>
-			<div class="control-div" id="level-control">
+			<p class="control-descriptor">Play mode:</p>
+			<div class="control-div reduced-font-size" id="level-control">
 				<p id="current-level-control"></p>
-			</div>-->
+			</div>
 			<p id="the-score"></p>
 		</div>
 		<div id="the-game">
@@ -27,22 +27,22 @@
 				<div class="game-div" id="numeral-div">
 					<p id="the-numeral"></p>
 				</div>
-				<div class="game-div" id="chinese-div">
-					<p id="the-chinese"></p>
-				</div>
 				<div class="game-div" id="sinoKorean-div">
 					<p id="the-sinoKorean"></p>
+				</div>
+				<div class="game-div" id="korean-div">
+					<p id="the-korean"></p>
 				</div>
 			</div>
 			<div class="nobreak">
 				<div class="game-div" id="sinoKoreanRomaja-div">
 					<p id="the-sinoKoreanRomaja"></p>
 				</div>
-				<div class="game-div" id="korean-div">
-					<p id="the-korean"></p>
-				</div>
 				<div class="game-div" id="koreanRomaja-div">
 					<p id="the-koreanRomaja"></p>
+				</div>
+				<div class="game-div" id="chinese-div">
+					<p id="the-chinese"></p>
 				</div>
 			</div>
 		</div>
