few cosmetic changes : controls in a table (prettier), lime green instead of green, remove completely romaja and chinese for advanced modes + fix for 두

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 		<div id="the-rules">
 			<p>Korean numbers quiz! Find the correct answer. </p>
 			<p>Click on the game tiles to toggle their visibility and customise your training.</p>
-			<p class="control-descriptor">Answer tiles style:</p>
-			<div class="control-div reduced-font-size" id="answer-control">
-				<p id="current-answer-control"></p>
-			</div>
-			<p class="control-descriptor">Play mode:</p>
-			<div class="control-div reduced-font-size" id="level-control">
-				<p id="current-level-control"></p>
-			</div>
+			<table>
+				<tr>
+					<td>Answer tiles style:</td>
+					<td><div class="control-div reduced-font-size" id="answer-control">
+						<p id="current-answer-control"></p>
+					</div></td>
+				</tr>
+				<tr>
+					<td>Play mode:</td>
+					<td><div class="control-div reduced-font-size" id="level-control">
+						<p id="current-level-control"></p>
+					</div></td>
+				</tr>
+			</table>
 			<p id="the-score"></p>
 		</div>
 		<div id="the-game">
